# pi-pico-mux-demo

./: CMakeLists.txt  README.md  muxtest.c
